[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game/Stalactite/Stalactite.gd" type="Script" id=1]
[ext_resource path="res://Game/Stalactite/Stalactite-01.png" type="Texture" id=2]
[ext_resource path="res://Game/Stalactite/Stalactite-02.png" type="Texture" id=3]
[ext_resource path="res://Sound/Stalactite.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Break"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteColor:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 150.0
angular_velocity = -2.19323e+038
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0

[node name="Stalactite" type="Area2D" groups=[
"Stalactite",
]]
z_index = 5
collision_layer = 512
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
polygon = PoolVector2Array( -48, 0, -32, 68, -23, 48, -11, 96, 3, 58, 14, 85, 24, 48, 33, 64, 48, 0 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 48 )
texture = ExtResource( 2 )
hframes = 3
region_rect = Rect2( 0, 0, 96, 96 )

[node name="SpriteColor" type="Sprite" parent="."]
modulate = Color( 0, 0, 1, 1 )
position = Vector2( 0, 48 )
texture = ExtResource( 3 )
hframes = 3
region_rect = Rect2( 96, 0, 96, 96 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Break = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, 65 )
enabled = true
cast_to = Vector2( 0, 144 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, 48 )
emitting = false
amount = 25
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
process_material = SubResource( 2 )

[node name="BreakSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Effects"

[connection signal="body_entered" from="." to="." method="_on_Stalactite_body_entered"]
